--- a/static/index.html
+++ b/static/index.html
@@ -35,7 +35,49 @@
             	<header class="header">
   <div class="header__section">
     <div class="header__inner">
-      
+      <div class="top-line">
+        <div class="top-line__section">
+          <div class="top-line__inner contain">
+            <div class="logo">
+  <a href="#" class="logo__link">
+    <img src="img/logo.svg" alt="">
+  </a>
+  <div class="logo__desc">
+    Строительство бань по всей России
+  </div>
+</div><!-- logo -->
+            <a href="tel:+88003330477" class="top-line__phone">8 (800) 333-04-77</a>
+            <div class="top-line__schedule">Пн-Пт с 10:00 до 20:00</div>
+            <div class="header-contacts">
+              <div class="header-contacts__section">
+                <div class="header-contacts__socials">
+                  <a href="#" class="header-contacts__social-link header-contacts__social-link--whatsapp"></a>
+                  <a href="#" class="header-contacts__social-link header-contacts__social-link--telegram"></a>
+                </div>
+                <a href="tel:+88003330477" class="header-contacts__phone">8 (800) 333-04-77</a>
+                <a href="#" class="header-contacts__call">Заказать звонок</a>
+                <button class="button-burger js-button-burger">
+                  <span></span>
+                </button>
+              </div>
+            </div><!-- header-contacts -->
+          </div>
+        </div>
+        <div class="top-line__menu">
+          <div class="main-menu">
+  <nav class="main-menu__nav contain">
+    <ul>
+      <li><a href="#">Каталог</a></li>
+      <li><a href="#">Фотоотчеты</a></li>
+      <li><a href="#">Акции</a></li>
+      <li><a href="#">Кредит</a></li>
+      <li><a href="#">Доставка</a></li>
+      <li><a href="#">Контакты</a></li>
+    </ul>
+  </nav>
+</div><!-- main-menu -->
+        </div>
+      </div><!-- top-line -->
     </div>
   </div>
 </header><!-- header -->
