added hero block

--- a/static/index.html
+++ b/static/index.html
@@ -89,7 +89,36 @@
                 <main class="app__main">
                     
 
-
+    <div class="hero">
+  <div style="background-image: url('img/hero-img.png');" class="hero__section">
+    <div class="hero__inner contain">
+      <div class="hero__container swiper js-hero-slider">
+        <div class="hero__items swiper-wrapper">
+          <div class="hero__item swiper-slide">
+            <div class="hero__content">
+              <div class="hero__title">
+                Качественные бани с доставкой
+                на участок
+              </div>
+              <a class="hero__button button-default" href="#">Выбрать баню</a>
+            </div>
+          </div>
+          <div class="hero__item swiper-slide">
+            <div class="hero__content">
+              <div class="hero__title">
+                Качественные бани с доставкой
+                на участок
+              </div>
+              <a class="hero__button button-default" href="#">Выбрать баню</a>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+      </div>
+    </div>
+  </div>
+</div><!-- hero -->
 
 
                 </main><!-- app:main -->
