added catalog preview block

--- a/marmelad/_blocks/hero/hero.html
+++ b/marmelad/_blocks/hero/hero.html
@@ -15,8 +15,8 @@
           <div elem="item" class="swiper-slide">
             <div elem="content">
               <div elem="title">
-                Качественные бани с доставкой
-                на участок
+                Печь Ермак-12
+                в подарок!
               </div>
               <a elem="button" class="button-default" href="#">Выбрать баню</a>
             </div>
