added steps work

--- a/static/index.html
+++ b/static/index.html
@@ -267,6 +267,73 @@
   </div>
 </div><!-- catalog-preview -->
 
+    <div class="steps-work">
+  <div class="steps-work__section">
+    <div class="steps-work__inner contain">
+      <div class="steps-work__head">
+        <div class="steps-work__title">Этапы работы</div>
+      </div>
+      <div class="steps-work__container swiper js-steps-work-slider">
+        <div class="steps-work__items swiper-wrapper">
+          <div class="steps-work__item swiper-slide">
+            <div class="steps-work__body">
+              <div class="steps-work__num">01</div>
+              <div class="steps-work__name">Заявка</div>
+              <div class="steps-work__text">
+                Оставьте нам заявку,
+                или звоните 8(800) 333 04 77
+              </div>
+            </div>
+          </div>
+          <div class="steps-work__item swiper-slide">
+            <div class="steps-work__body">
+              <div class="steps-work__num">02</div>
+              <div class="steps-work__name">Договор</div>
+              <div class="steps-work__text">
+                Составляем договор
+                с учетом
+                всех нюансов
+              </div>
+            </div>
+          </div>
+          <div class="steps-work__item swiper-slide">
+            <div class="steps-work__body">
+              <div class="steps-work__num">03</div>
+              <div class="steps-work__name">Доставка</div>
+              <div class="steps-work__text">
+                Доставка всегда <br>
+                в назначенный день
+              </div>
+            </div>
+          </div>
+          <div class="steps-work__item swiper-slide">
+            <div class="steps-work__body">
+              <div class="steps-work__num">04</div>
+              <div class="steps-work__name">Разгрузка</div>
+              <div class="steps-work__text">
+                Выгрузка материалов <br>
+                на участке
+              </div>
+            </div>
+          </div>
+          <div class="steps-work__item swiper-slide">
+            <div class="steps-work__body">
+              <div class="steps-work__num">05</div>
+              <div class="steps-work__name">Оплата</div>
+              <div class="steps-work__text">
+                Оплата <br>
+                по договору
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+      </div>
+    </div>
+  </div>
+</div><!-- steps-work -->
+
 
                 </main><!-- app:main -->
 
