added our adv block

--- a/static/index.html
+++ b/static/index.html
@@ -334,6 +334,117 @@
   </div>
 </div><!-- steps-work -->
 
+    <div class="our-advantages">
+  <div class="our-advantages__section">
+    <div class="our-advantages__inner contain">
+      <div class="our-advantages__head">
+        <div class="our-advantages__title">Почему выбирают нас:</div>
+      </div>
+      <div class="our-advantages__items">
+        <div class="our-advantages__item">
+          <div class="our-advantages__body">
+            <div class="our-advantages__icon">
+              <img src="img/our-advantages-icon.svg" alt="">
+            </div>
+            <div class="our-advantages__name">
+              Строим <br>
+              без предоплаты
+            </div>
+          </div>
+        </div>
+        <div class="our-advantages__item">
+          <div class="our-advantages__body">
+            <div class="our-advantages__icon">
+              <img src="img/our-advantages-icon2.svg" alt="">
+            </div>
+            <div class="our-advantages__name">
+              Собственное <br>
+              производство
+            </div>
+          </div>
+        </div>
+        <div class="our-advantages__item">
+          <div class="our-advantages__body">
+            <div class="our-advantages__icon">
+              <img src="img/our-advantages-icon3.svg" alt="">
+            </div>
+            <div class="our-advantages__name">
+              Доставка в любой <br>
+              регион РФ
+            </div>
+          </div>
+        </div>
+        <div class="our-advantages__item">
+          <div class="our-advantages__body">
+            <div class="our-advantages__icon">
+              <img src="img/our-advantages-icon4.svg" alt="">
+            </div>
+            <div class="our-advantages__name">
+              Качественные <br>
+              материалы
+            </div>
+          </div>
+        </div>
+        <div class="our-advantages__item">
+          <div class="our-advantages__body">
+            <div class="our-advantages__icon">
+              <img src="img/our-advantages-icon5.svg" alt="">
+            </div>
+            <div class="our-advantages__name">
+              Современные <br>
+              технологии
+            </div>
+          </div>
+        </div>
+        <div class="our-advantages__item">
+          <div class="our-advantages__body">
+            <div class="our-advantages__icon">
+              <img src="img/our-advantages-icon6.svg" alt="">
+            </div>
+            <div class="our-advantages__name">
+              Гарантия <br>
+              на работы
+            </div>
+          </div>
+        </div>
+        <div class="our-advantages__item">
+          <div class="our-advantages__body">
+            <div class="our-advantages__icon">
+              <img src="img/our-advantages-icon7.svg" alt="">
+            </div>
+            <div class="our-advantages__name">
+              Выгодные <br>
+              предложения
+            </div>
+          </div>
+        </div>
+        <div class="our-advantages__item">
+          <div class="our-advantages__body">
+            <div class="our-advantages__icon">
+              <img src="img/our-advantages-icon8.svg" alt="">
+            </div>
+            <div class="our-advantages__name">
+              Низкие <br>
+              цены
+            </div>
+          </div>
+        </div>
+        <div class="our-advantages__item">
+          <div class="our-advantages__body">
+            <div class="our-advantages__icon">
+              <img src="img/our-advantages-icon9.svg" alt="">
+            </div>
+            <div class="our-advantages__name">
+              Возможность <br>
+              оформления кредита
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div><!-- our-advantages -->
+
 
                 </main><!-- app:main -->
 
