added our works block

--- a/static/index.html
+++ b/static/index.html
@@ -445,6 +445,75 @@
   </div>
 </div><!-- our-advantages -->
 
+    <div class="our-works">
+  <div class="our-works__section">
+    <div class="our-works__inner">
+      <div class="our-works__head contain">
+        <div class="our-works__title">Работы компании</div>
+      </div>
+      <div class="our-works__container swiper js-our-works-slider">
+        <div class="our-works__items swiper-wrapper">
+          <div class="our-works__item swiper-slide">
+            <div class="our-works__body">
+              <div class="our-works__img">
+                <img src="img/our-works-img.jpg" alt="">
+              </div>
+              <div class="our-works__content">
+                <div class="our-works__name">Ленинградская область</div>
+                <div class="our-works__date">21.05.19 г</div>
+              </div>
+            </div>
+          </div>
+          <div class="our-works__item swiper-slide">
+            <div class="our-works__body">
+              <div class="our-works__img">
+                <img src="img/our-works-img2.jpg" alt="">
+              </div>
+              <div class="our-works__content">
+                <div class="our-works__name">Московская область</div>
+                <div class="our-works__date">21.03.19 г</div>
+              </div>
+            </div>
+          </div>
+          <div class="our-works__item swiper-slide">
+            <div class="our-works__body">
+              <div class="our-works__img">
+                <img src="img/our-works-img3.jpg" alt="">
+              </div>
+              <div class="our-works__content">
+                <div class="our-works__name">Московская область</div>
+                <div class="our-works__date">21.12.19 г</div>
+              </div>
+            </div>
+          </div>
+          <div class="our-works__item swiper-slide">
+            <div class="our-works__body">
+              <div class="our-works__img">
+                <img src="img/our-works-img4.jpg" alt="">
+              </div>
+              <div class="our-works__content">
+                <div class="our-works__name">Новгородская область</div>
+                <div class="our-works__date">15.10.19 г</div>
+              </div>
+            </div>
+          </div>
+          <div class="our-works__item swiper-slide">
+            <div class="our-works__body">
+              <div class="our-works__img">
+                <img src="img/our-works-img5.jpg" alt="">
+              </div>
+              <div class="our-works__content">
+                <div class="our-works__name">Боровический район</div>
+                <div class="our-works__date">11.06.19 г</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div><!-- our-works -->
+
 
                 </main><!-- app:main -->
 
