--- a/static/index.html
+++ b/static/index.html
@@ -89,7 +89,7 @@
                 <main class="app__main">
                     
 
-    <div class="hero">
+<div class="hero">
   <div style="background-image: url('img/hero-img.png');" class="hero__section">
     <div class="hero__inner contain">
       <div class="hero__container swiper js-hero-slider">
@@ -119,8 +119,8 @@
     </div>
   </div>
 </div><!-- hero -->
-    
-    <div class="catalog-preview">
+
+<div class="catalog-preview">
   <div class="catalog-preview__section">
     <div class="catalog-preview__inner">
       <div class="catalog-preview__wrapper js-catalog-preview-wrapper">
@@ -267,7 +267,7 @@
   </div>
 </div><!-- catalog-preview -->
 
-    <div class="steps-work">
+<div class="steps-work">
   <div class="steps-work__section">
     <div class="steps-work__inner contain">
       <div class="steps-work__head">
@@ -334,7 +334,7 @@
   </div>
 </div><!-- steps-work -->
 
-    <div class="our-advantages">
+<div class="our-advantages">
   <div class="our-advantages__section">
     <div class="our-advantages__inner contain">
       <div class="our-advantages__head">
@@ -445,7 +445,7 @@
   </div>
 </div><!-- our-advantages -->
 
-    <div class="our-works">
+<div class="our-works">
   <div class="our-works__section">
     <div class="our-works__inner">
       <div class="our-works__head contain">
@@ -514,7 +514,7 @@
   </div>
 </div><!-- our-works -->
 
-    <div class="contacts-form">
+<div class="contacts-form">
   <div class="contacts-form__section">
     <div class="contacts-form__inner">
       <div class="contacts-form__wrapper">
@@ -572,6 +572,210 @@
 </div><!-- contacts-form -->
 
 
+
+<div class="product-preview product-preview--new">
+  <div class="product-preview__section">
+    <div class="product-preview__inner contain">
+      <div class="product-preview__head">
+        <h2>Новинки</h2>
+        <div class="product-preview__nav-slider">
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
+      </div>
+      <div class="product-preview__container swiper js-product-preview-slider">
+        <div class="product-preview__items swiper-wrapper">
+          <div class="product-preview__item swiper-slide">
+            <div class="product-thumb product-thumb--new">
+              <div class="product-thumb__body">
+                <div class="product-thumb__top">
+                  <a href="#" class="product-thumb__img">
+                    <img src="img/product-thumb-img.png" alt="">
+                  </a>
+                  <div class="product-thumb__tag">NEW</div>
+                </div>
+                <div class="product-thumb__bottom">
+                  <div class="product-thumb__name">
+                    Баня тип 01
+                  </div>
+                  <div class="product-thumb__info">
+                    <div class="product-thumb__size">
+                      <span>Размер</span>
+                      <strong>11 х 6 м</strong>
+                    </div>
+                    <div class="product-thumb__price">
+                      <span>200 000 р</span>
+                      <strong>132 000 р</strong>
+                    </div>
+                  </div>
+                  <a class="product-thumb__link-more button-default button-default--outline" href="#">Подробнее</a>
+                </div>
+              </div>
+            </div><!-- product-thumb -->
+          </div>
+          <div class="product-preview__item swiper-slide">
+            <div class="product-thumb product-thumb--new">
+              <div class="product-thumb__body">
+                <div class="product-thumb__top">
+                  <a href="#" class="product-thumb__img">
+                    <img src="img/product-thumb-img2.png" alt="">
+                  </a>
+                  <div class="product-thumb__tag">NEW</div>
+                </div>
+                <div class="product-thumb__bottom">
+                  <div class="product-thumb__name">
+                    Баня тип 02
+                  </div>
+                  <div class="product-thumb__info">
+                    <div class="product-thumb__size">
+                      <span>Размер</span>
+                      <strong>13 х 6 м</strong>
+                    </div>
+                    <div class="product-thumb__price">
+                      <span>200 000 р</span>
+                      <strong>215 000 р</strong>
+                    </div>
+                  </div>
+                  <a class="product-thumb__link-more button-default button-default--outline" href="#">Подробнее</a>
+                </div>
+              </div>
+            </div><!-- product-thumb -->
+          </div>
+          <div class="product-preview__item swiper-slide">
+            <div class="product-thumb product-thumb--new">
+              <div class="product-thumb__body">
+                <div class="product-thumb__top">
+                  <a href="#" class="product-thumb__img">
+                    <img src="img/product-thumb-img3.png" alt="">
+                  </a>
+                  <div class="product-thumb__tag">NEW</div>
+                </div>
+                <div class="product-thumb__bottom">
+                  <div class="product-thumb__name">
+                    Баня тип 03
+                  </div>
+                  <div class="product-thumb__info">
+                    <div class="product-thumb__size">
+                      <span>Размер</span>
+                      <strong>10 х 6 м</strong>
+                    </div>
+                    <div class="product-thumb__price">
+                      <span>200 000 р</span>
+                      <strong>187 000 р</strong>
+                    </div>
+                  </div>
+                  <a class="product-thumb__link-more button-default button-default--outline" href="#">Подробнее</a>
+                </div>
+              </div>
+            </div><!-- product-thumb -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div><!-- product-preview -->
+
+<div class="product-preview product-preview--hit">
+  <div class="product-preview__section">
+    <div class="product-preview__inner contain">
+      <div class="product-preview__head">
+        <h2>Лидеры продаж</h2>
+        <div class="product-preview__nav-slider">
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
+      </div>
+      <div class="product-preview__container swiper js-product-preview-slider">
+        <div class="product-preview__items swiper-wrapper">
+          <div class="product-preview__item swiper-slide">
+            <div class="product-thumb product-thumb--hit">
+              <div class="product-thumb__body">
+                <div class="product-thumb__top">
+                  <a href="#" class="product-thumb__img">
+                    <img src="img/product-thumb-img4.png" alt="">
+                  </a>
+                  <div class="product-thumb__tag">Хит</div>
+                </div>
+                <div class="product-thumb__bottom">
+                  <div class="product-thumb__name">
+                    Баня тип 01
+                  </div>
+                  <div class="product-thumb__info">
+                    <div class="product-thumb__size">
+                      <span>Размер</span>
+                      <strong>11 х 6 м</strong>
+                    </div>
+                    <div class="product-thumb__price">
+                      <span>200 000 р</span>
+                      <strong>132 000 р</strong>
+                    </div>
+                  </div>
+                  <a class="product-thumb__link-more button-default button-default--outline" href="#">Подробнее</a>
+                </div>
+              </div>
+            </div><!-- product-thumb -->
+          </div>
+          <div class="product-preview__item swiper-slide">
+            <div class="product-thumb product-thumb--hit">
+              <div class="product-thumb__body">
+                <div class="product-thumb__top">
+                  <a href="#" class="product-thumb__img">
+                    <img src="img/product-thumb-img5.png" alt="">
+                  </a>
+                  <div class="product-thumb__tag">Хит</div>
+                </div>
+                <div class="product-thumb__bottom">
+                  <div class="product-thumb__name">
+                    Баня тип 02
+                  </div>
+                  <div class="product-thumb__info">
+                    <div class="product-thumb__size">
+                      <span>Размер</span>
+                      <strong>13 х 6 м</strong>
+                    </div>
+                    <div class="product-thumb__price">
+                      <span>200 000 р</span>
+                      <strong>215 000 р</strong>
+                    </div>
+                  </div>
+                  <a class="product-thumb__link-more button-default button-default--outline" href="#">Подробнее</a>
+                </div>
+              </div>
+            </div><!-- product-thumb -->
+          </div>
+          <div class="product-preview__item swiper-slide">
+            <div class="product-thumb product-thumb--hit">
+              <div class="product-thumb__body">
+                <div class="product-thumb__top">
+                  <a href="#" class="product-thumb__img">
+                    <img src="img/product-thumb-img6.png" alt="">
+                  </a>
+                  <div class="product-thumb__tag">Хит</div>
+                </div>
+                <div class="product-thumb__bottom">
+                  <div class="product-thumb__name">
+                    Баня тип 03
+                  </div>
+                  <div class="product-thumb__info">
+                    <div class="product-thumb__size">
+                      <span>Размер</span>
+                      <strong>10 х 6 м</strong>
+                    </div>
+                    <div class="product-thumb__price">
+                      <span>200 000 р</span>
+                      <strong>187 000 р</strong>
+                    </div>
+                  </div>
+                  <a class="product-thumb__link-more button-default button-default--outline" href="#">Подробнее</a>
+                </div>
+              </div>
+            </div><!-- product-thumb -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div><!-- product-preview -->
 
 
                 </main><!-- app:main -->
