--- a/marmelad/_blocks/_footer/footer.html
+++ b/marmelad/_blocks/_footer/footer.html
@@ -1,7 +1,39 @@
 <footer block="footer">
   <div elem="section">
-    <div elem="inner">
-      
+    <div elem="inner" class="contain">
+      <div elem="top">
+        {% include "logo.html" %}
+        <div elem="contacts">
+          <a elem="phone" href="#">8 (800) 333-04-77</a>
+          <a elem="button-call" class="button-default" href="#">Заказать звонок</a>
+        </div>
+      </div>
+      <div elem="middle">
+        <nav elem="nav">
+          <ul>
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Фотоотчеты</a></li>
+            <li><a href="#">Акции</a></li>
+            <li><a href="#">Кредит</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div elem="bottom">
+        <div elem="links">
+          <a href="#">Политика конфиденциальности</a>
+          <a href="#">Карта сайта</a>
+        </div>
+        <a elem="phone" mods="mobile" href="#">8 (800) 333-04-77</a>
+        <div elem="socials">
+          <a elem="social-link" mods="whatsapp" href="#"></a>
+          <a elem="social-link" mods="telegram" href="#"></a>
+        </div>
+        <div elem="links">
+          <a href="#">Разработка - Vertal.ru</a>
+        </div>
+      </div>
     </div>
   </div>
 </footer><!-- footer -->
