--- a/marmelad/_pages/index.html
+++ b/marmelad/_pages/index.html
@@ -129,4 +129,18 @@ layout: !!map
   </div>
 </div><!-- product-preview -->
 
+<div block="content-block">
+  <p>
+    Наша компания — ООО «Дома из Пестова» — на рынке строительных услуг с 2007 года. За более чем 10 лет работы мы
+    приобрели
+    огромный опыт в строительстве под ключ и проектировании.
+  </p>
+  <p>
+    Клиенты хвалят построенные объекты и называют их долговечными и уютными. Производственная база располагается в городе
+    Пестово Новгородской области. В этих краях издавна мужчины занимались деревянным домостроительством и здесь же
+    находится
+    один из крупнейших лесопильных заводов в России.
+  </p>
+</div>
+
 {% endblock %}
