--- a/static/index.html
+++ b/static/index.html
@@ -777,6 +777,20 @@
   </div>
 </div><!-- product-preview -->
 
+<div class="content-block">
+  <p>
+    Наша компания — ООО «Дома из Пестова» — на рынке строительных услуг с 2007 года. За более чем 10 лет работы мы
+    приобрели
+    огромный опыт в строительстве под ключ и проектировании.
+  </p>
+  <p>
+    Клиенты хвалят построенные объекты и называют их долговечными и уютными. Производственная база располагается в городе
+    Пестово Новгородской области. В этих краях издавна мужчины занимались деревянным домостроительством и здесь же
+    находится
+    один из крупнейших лесопильных заводов в России.
+  </p>
+</div>
+
 
                 </main><!-- app:main -->
 
@@ -785,8 +799,47 @@
             
             	<footer class="footer">
   <div class="footer__section">
-    <div class="footer__inner">
-      
+    <div class="footer__inner contain">
+      <div class="footer__top">
+        <div class="logo">
+  <a href="#" class="logo__link">
+    <img src="img/logo.svg" alt="">
+  </a>
+  <div class="logo__desc">
+    Строительство бань по всей России
+  </div>
+</div><!-- logo -->
+        <div class="footer__contacts">
+          <a href="#" class="footer__phone">8 (800) 333-04-77</a>
+          <a class="footer__button-call button-default" href="#">Заказать звонок</a>
+        </div>
+      </div>
+      <div class="footer__middle">
+        <nav class="footer__nav">
+          <ul>
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Фотоотчеты</a></li>
+            <li><a href="#">Акции</a></li>
+            <li><a href="#">Кредит</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="footer__bottom">
+        <div class="footer__links">
+          <a href="#">Политика конфиденциальности</a>
+          <a href="#">Карта сайта</a>
+        </div>
+        <a href="#" class="footer__phone footer__phone--mobile">8 (800) 333-04-77</a>
+        <div class="footer__socials">
+          <a href="#" class="footer__social-link footer__social-link--whatsapp"></a>
+          <a href="#" class="footer__social-link footer__social-link--telegram"></a>
+        </div>
+        <div class="footer__links">
+          <a href="#">Разработка - Vertal.ru</a>
+        </div>
+      </div>
     </div>
   </div>
 </footer><!-- footer -->
