added categories page & more

--- a/static/index.html
+++ b/static/index.html
@@ -39,7 +39,7 @@
         <div class="top-line__section">
           <div class="top-line__inner contain">
             <div class="logo">
-  <a href="#" class="logo__link">
+  <a href="/" class="logo__link">
     <img src="img/logo.svg" alt="">
   </a>
   <div class="logo__desc">
@@ -802,7 +802,7 @@
     <div class="footer__inner contain">
       <div class="footer__top">
         <div class="logo">
-  <a href="#" class="logo__link">
+  <a href="/" class="logo__link">
     <img src="img/logo.svg" alt="">
   </a>
   <div class="logo__desc">
