added filter, sorting

--- a/marmelad/_pages/catalog-projects-page.html
+++ b/marmelad/_pages/catalog-projects-page.html
@@ -24,6 +24,10 @@ path: [
     </div>
   </div>
 
+  {% include "filter-projects.html" %}
+  
+  {% include "sorting-projects.html" %}
+
   {% include "catalog-projects.html" %}
   
   {% include "contacts-form.html" %}
