--- a/static/catalog-projects-page.html
+++ b/static/catalog-projects-page.html
@@ -106,6 +106,37 @@
     </div>
   </div>
 
+  <div class="filter-projects">
+  <div class="filter-projects__section">
+    <div class="filter-projects__inner contain">
+      <div class="filter-projects__buttons">
+        <a class="filter-projects__button js-filter-buttons" href="#">6х10м</a>
+        <a class="filter-projects__button js-filter-buttons _is-active" href="#">Из бруса</a>
+        <a class="filter-projects__button js-filter-buttons" href="#">Каркас</a>
+        <a class="filter-projects__button js-filter-buttons" href="#">Баня бочка</a>
+        <a class="filter-projects__button js-filter-buttons" href="#">Мобильные бани</a>
+        <a class="filter-projects__button js-filter-buttons" href="#">Под усадку</a>
+      </div>
+    </div>
+  </div>
+</div><!-- filter-projects -->
+  
+  <div class="sorting-projects">
+  <div class="sorting-projects__section">
+    <div class="sorting-projects__inner contain">
+      <div class="sorting-projects__container">
+        <div class="sorting-projects__title">Сортировка:</div>
+        <div class="sorting-projects__buttons">
+          <a class="sorting-projects__button js-sorting-buttons _is-active" href="#">Все</a>
+          <a class="sorting-projects__button js-sorting-buttons" href="#">Сначала дешевле</a>
+          <a class="sorting-projects__button js-sorting-buttons" href="#">Сначала дороже</a>
+          <a class="sorting-projects__button js-sorting-buttons" href="#">Популярные</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div><!-- sorting-projects -->
+
   <div class="catalog-projects">
   <div class="catalog-projects__section">
     <div class="catalog-projects__inner contain">
