--- a/static/catalog-projects-page.html
+++ b/static/catalog-projects-page.html
@@ -370,6 +370,85 @@
 
 
 
+  <div class="see-also-product">
+  <div class="see-also-product__section">
+    <div class="see-also-product__inner contain">
+      <div class="see-also-product__items">
+        <div class="see-also-product__item">
+          <div class="product-thumb">
+            <div class="product-thumb__body">
+              <div class="product-thumb__top">
+                <a href="#" class="product-thumb__img">
+                  <img src="img/product-thumb-img.png" alt="">
+                </a>
+              </div>
+              <div class="product-thumb__bottom">
+                <div class="product-thumb__name">
+                  Баня тип 06
+                </div>
+                <div class="product-thumb__info">
+                  <div class="product-thumb__size">
+                    <span>Размер</span>
+                    <strong>15 х 7 м</strong>
+                  </div>
+                  <div class="product-thumb__price">
+                    <span>200 000 р</span>
+                    <strong>150 000 р</strong>
+                  </div>
+                </div>
+                <a class="product-thumb__link-more button-default button-default--outline" href="#">Подробнее</a>
+              </div>
+            </div>
+          </div><!-- product-thumb -->
+        </div>
+        <div class="see-also-product__item">
+          <div class="banner-thumb">
+            <div class="banner-thumb__body">
+              <div class="banner-thumb__content">
+                <div class="banner-thumb__name">Банный набор</div>
+                <div class="banner-thumb__price">
+                  <strong>в подарок!</strong>
+                </div>
+              </div>
+              <div class="banner-thumb__img">
+                <img src="img/banner-thumb-img.png" alt="">
+              </div>
+            </div>
+          </div><!-- product-thumb -->
+        </div>
+        <div class="see-also-product__item">
+          <div class="product-thumb product-thumb--hit">
+            <div class="product-thumb__body">
+              <div class="product-thumb__top">
+                <a href="#" class="product-thumb__img">
+                  <img src="img/product-thumb-img3.png" alt="">
+                </a>
+                <div class="product-thumb__tag">Хит</div>
+              </div>
+              <div class="product-thumb__bottom">
+                <div class="product-thumb__name">
+                  Баня тип 04
+                </div>
+                <div class="product-thumb__info">
+                  <div class="product-thumb__size">
+                    <span>Размер</span>
+                    <strong>12 х 6 м</strong>
+                  </div>
+                  <div class="product-thumb__price">
+                    <span>200 000 р</span>
+                    <strong>156 000 р</strong>
+                  </div>
+                </div>
+                <a class="product-thumb__link-more button-default button-default--outline" href="#">Подробнее</a>
+              </div>
+            </div>
+          </div><!-- product-thumb -->
+        </div>
+      </div>
+    </div>
+  </div>
+</div><!-- see-also-product -->
+
 
 
                 </main><!-- app:main -->
