added card project

--- a/marmelad/_blocks/other-projects/other-projects.html
+++ b/marmelad/_blocks/other-projects/other-projects.html
@@ -1,6 +1,9 @@
-<div block="see-also-product">
+<div block="other-projects">
   <div elem="section">
     <div elem="inner" class="contain">
+      <div elem="head">
+        <h2>Смотрите также:</h2>
+      </div>
       <div elem="items">
         <div elem="item">
           <div block="product-thumb">
