--- a/marmelad/_pages/catalog-projects-page.html
+++ b/marmelad/_pages/catalog-projects-page.html
@@ -32,7 +32,7 @@ path: [
   
   {% include "contacts-form.html" %}
 
-  {% include "see-also-product.html" %}
+  {% include "other-projects.html" %}
 
 
 {% endblock %}
