added shares block & more

--- a/marmelad/_blocks/share-thumb/share-thumb.html
+++ b/marmelad/_blocks/share-thumb/share-thumb.html
@@ -1,1 +1,14 @@
-<div block="share-thumb"></div><!-- share-thumb -->
+<div block="share-thumb">
+  <div elem="body">
+    <div elem="img">
+      <img src="img/share-thumb-img.jpg" alt="">
+    </div>
+    <div elem="content">
+      <div elem="name">Акция от ЛокоБанк </div>
+      <div elem="text">
+        При заказе дома или бани стоимость гостевого дома всего 79 000 руб.
+      </div>
+      <div elem="date">23.02.2021</div>
+    </div>
+  </div>
+</div><!-- share-thumb -->
