--- a/marmelad/_pages/card-project-page.html
+++ b/marmelad/_pages/card-project-page.html
@@ -28,6 +28,41 @@ path: [
 
   {% include "steps-work.html" %} 
 
+  <div block="shares-block" mods="type2">
+    <div elem="section">
+      <div elem="inner" class="contain">
+        <div elem="items">
+          <div elem="item">
+            <div block="share-thumb">
+              <div elem="body">
+                <div elem="img">
+                  <img src="img/share-thumb-img.jpg" alt="">
+                </div>
+                <div elem="content">
+                  <div elem="name">Акция от ЛокоБанк </div>
+                  <div elem="date">23.02.2021</div>
+                </div>
+              </div>
+            </div><!-- share-thumb -->
+          </div>
+          <div elem="item">
+            <div block="share-thumb">
+              <div elem="body">
+                <div elem="img">
+                  <img src="img/share-thumb-img2.jpg" alt="">
+                </div>
+                <div elem="content">
+                  <div elem="name">Скидка на проектную документацию</div>
+                  <div elem="date">23.02.2021</div>
+                </div>
+              </div>
+            </div><!-- share-thumb -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div><!-- shares-block -->
+
   <div block="other-projects">
     <div elem="section">
       <div elem="inner" class="contain">
