--- a/static/card-project-page.html
+++ b/static/card-project-page.html
@@ -329,6 +329,41 @@
   </div>
 </div><!-- steps-work --> 
 
+  <div class="shares-block shares-block--type2">
+    <div class="shares-block__section">
+      <div class="shares-block__inner contain">
+        <div class="shares-block__items">
+          <div class="shares-block__item">
+            <div class="share-thumb">
+              <div class="share-thumb__body">
+                <div class="share-thumb__img">
+                  <img src="img/share-thumb-img.jpg" alt="">
+                </div>
+                <div class="share-thumb__content">
+                  <div class="share-thumb__name">Акция от ЛокоБанк </div>
+                  <div class="share-thumb__date">23.02.2021</div>
+                </div>
+              </div>
+            </div><!-- share-thumb -->
+          </div>
+          <div class="shares-block__item">
+            <div class="share-thumb">
+              <div class="share-thumb__body">
+                <div class="share-thumb__img">
+                  <img src="img/share-thumb-img2.jpg" alt="">
+                </div>
+                <div class="share-thumb__content">
+                  <div class="share-thumb__name">Скидка на проектную документацию</div>
+                  <div class="share-thumb__date">23.02.2021</div>
+                </div>
+              </div>
+            </div><!-- share-thumb -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div><!-- shares-block -->
+
   <div class="other-projects">
     <div class="other-projects__section">
       <div class="other-projects__inner contain">
