added equipment block & more

--- a/marmelad/_pages/card-project-page.html
+++ b/marmelad/_pages/card-project-page.html
@@ -63,6 +63,8 @@ path: [
     </div>
   </div><!-- shares-block -->
 
+  {% include "equipment-block.html" %}
+
   <div block="other-projects">
     <div elem="section">
       <div elem="inner" class="contain">
