--- a/static/card-project-page.html
+++ b/static/card-project-page.html
@@ -364,6 +364,247 @@
     </div>
   </div><!-- shares-block -->
 
+  <div class="equipment-block">
+  <div class="equipment-block__section">
+    <div class="equipment-block__inner contain">
+      <div class="equipment-block__head">
+        <h2>Комплектация</h2>
+      </div>
+      <div class="equipment-block__wrapper">
+        <div class="equipment-block__container-thumb swiper js-equipment-slider-thumbs">
+          <div class="equipment-block__items-thumb swiper-wrapper">
+            <div class="equipment-block__item-thumb swiper-slide">
+              <div class="equipment-block__name">
+                <span>Стандарт</span>
+                <strong>200 000 руб</strong>
+              </div>
+            </div>
+            <div class="equipment-block__item-thumb swiper-slide">
+              <div class="equipment-block__name">
+                <span>Премиум</span>
+                <strong>250 000 руб</strong>
+              </div>
+            </div>
+            <div class="equipment-block__item-thumb swiper-slide">
+              <div class="equipment-block__name">
+                <span>Под ключ</span>
+                <strong>300 000 руб</strong>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
+        <div class="equipment-block__container swiper js-equipment-slider">
+          <div class="equipment-block__items swiper-wrapper">
+            <div class="equipment-block__item swiper-slide">
+              <div class="equipment-block__table">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>Элемент</th>
+                      <th>Описание</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>Фундамент</td>
+                      <td>
+                        <p>
+                          Не входит в стоимость — рассчитывается отдельно по требованию заказчика.
+                        </p>
+                        <p>Может быть выполнен:</p>
+                        <p>— опорно-столбчатый;</p>
+                        <p>— свайно-винтовой;</p>
+                        <p>— железобетонные сваи;</p>
+                        <p>— ленточный мелкозаглубленный;</p>
+                        <p>— ленточный мелкозаглубленный с отмосткой;</p>
+                        <p>— монолитная плита;</p>
+                        <p>— свайно-ростверковый.</p>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        Основание дома
+                        (обвязка)
+                      </td>
+                      <td>
+                        <p>—
+                          Между обвязкой и фундаментом прокладывается гидроизоляционный сло (рубероид).
+                        </p>
+                        <p>— Выполняется двойной обвязочный венец.</p>
+                        <p>1 венец: брус 150х150 мм.</p>
+                        <p>2 венец: 100x150 мм.</p>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>Половые лаги</td>
+                      <td>
+                        <p>
+                          — Выполняются из бруса сечением 100х150 мм, устанавливаются во второй обвязочный венец с шагом 600 мм.
+                        </p>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        Черновые полы
+                        1-го этажа
+                      </td>
+                      <td>
+                        <p>— По лагам устанавливаются черепные бруски сечением 40х50 мм.</p>
+                        <p>
+                          — По черепным брускам выполняется сплошной настил из обрезной доски толщиной 20-22 мм 2-го сорта.
+                        </p>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <div class="equipment-block__item swiper-slide">
+              <div class="equipment-block__table">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>Элемент</th>
+                      <th>Описание</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>Фундамент</td>
+                      <td>
+                        <p>
+                          Не входит в стоимость — рассчитывается отдельно по требованию заказчика.
+                        </p>
+                        <p>Может быть выполнен:</p>
+                        <p>— опорно-столбчатый;</p>
+                        <p>— свайно-винтовой;</p>
+                        <p>— железобетонные сваи;</p>
+                        <p>— ленточный мелкозаглубленный;</p>
+                        <p>— ленточный мелкозаглубленный с отмосткой;</p>
+                        <p>— монолитная плита;</p>
+                        <p>— свайно-ростверковый.</p>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        Основание дома
+                        (обвязка)
+                      </td>
+                      <td>
+                        <p>—
+                          Между обвязкой и фундаментом прокладывается гидроизоляционный сло (рубероид).
+                        </p>
+                        <p>— Выполняется двойной обвязочный венец.</p>
+                        <p>1 венец: брус 150х150 мм.</p>
+                        <p>2 венец: 100x150 мм.</p>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>Половые лаги</td>
+                      <td>
+                        <p>
+                          — Выполняются из бруса сечением 100х150 мм, устанавливаются во второй обвязочный венец с шагом 600 мм.
+                        </p>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        Черновые полы
+                        1-го этажа
+                      </td>
+                      <td>
+                        <p>— По лагам устанавливаются черепные бруски сечением 40х50 мм.</p>
+                        <p>
+                          — По черепным брускам выполняется сплошной настил из обрезной доски толщиной 20-22 мм 2-го сорта.
+                        </p>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <div class="equipment-block__item swiper-slide">
+              <div class="equipment-block__table">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>Элемент</th>
+                      <th>Описание</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>Фундамент</td>
+                      <td>
+                        <p>
+                          Не входит в стоимость — рассчитывается отдельно по требованию заказчика.
+                        </p>
+                        <p>Может быть выполнен:</p>
+                        <p>— опорно-столбчатый;</p>
+                        <p>— свайно-винтовой;</p>
+                        <p>— железобетонные сваи;</p>
+                        <p>— ленточный мелкозаглубленный;</p>
+                        <p>— ленточный мелкозаглубленный с отмосткой;</p>
+                        <p>— монолитная плита;</p>
+                        <p>— свайно-ростверковый.</p>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        Основание дома
+                        (обвязка)
+                      </td>
+                      <td>
+                        <p>—
+                          Между обвязкой и фундаментом прокладывается гидроизоляционный сло (рубероид).
+                        </p>
+                        <p>— Выполняется двойной обвязочный венец.</p>
+                        <p>1 венец: брус 150х150 мм.</p>
+                        <p>2 венец: 100x150 мм.</p>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>Половые лаги</td>
+                      <td>
+                        <p>
+                          — Выполняются из бруса сечением 100х150 мм, устанавливаются во второй обвязочный венец с шагом 600 мм.
+                        </p>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        Черновые полы
+                        1-го этажа
+                      </td>
+                      <td>
+                        <p>— По лагам устанавливаются черепные бруски сечением 40х50 мм.</p>
+                        <p>
+                          — По черепным брускам выполняется сплошной настил из обрезной доски толщиной 20-22 мм 2-го сорта.
+                        </p>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="equipment-block__bottom">
+        <div class="equipment-block__content">
+          <p>
+            Простота и быстрота монтажа. Брусовые конструкции собираются в рекордные сроки в любой сезон без использования дорогих
+            механизмов. Брус легче бревна, значит, собрать сруб могут два человека. ... При аккуратной эксплуатации и уходе брусовая
+            баня прослужит от полувека.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div><!-- equipment-block -->
+
   <div class="other-projects">
     <div class="other-projects__section">
       <div class="other-projects__inner contain">
